--- a/NOVA/packages.config
+++ b/NOVA/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.AspNet.Web.Optimization.tr" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages.tr" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Identity.UI" version="6.0.3" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
