--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -46,13 +46,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Accessibility" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="NetOpenX.Rest.Client, Version=2.0.4.3, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Netsis\Nox\WSManager\Documents\RestClient\NetOpenX.Rest.Client.dll</HintPath>
-    </Reference>
+    <Reference Include="Microsoft.VisualStudio.NetFrameworkSerializationHelper, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -139,7 +138,9 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\2.mp4" />
     <Content Include="Content\Images\arka_logo.jpeg" />
+    <Content Include="Content\Images\background.jpg" />
     <Content Include="Content\Images\efece_logo.png" />
+    <Content Include="Content\Menu.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -171,12 +172,12 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\SecondPage.cshtml" />
+    <Content Include="Views\SecondPage\Index.cshtml" />
+    <Content Include="Views\Shared\_MenuLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\SecondPage\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -190,17 +191,6 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
-  </ItemGroup>
-  <ItemGroup>
-    <COMReference Include="NetOpenX50">
-      <Guid>{184B0A14-1416-44D7-978C-DECC4FC09693}</Guid>
-      <VersionMajor>5</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
