--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -534,6 +534,7 @@
     <Compile Include="Models\MakKoduModel.cs" />
     <Compile Include="Models\Modules.cs" />
     <Compile Include="Models\MSIPAcik.cs" />
+    <Compile Include="Models\Musteri.cs" />
     <Compile Include="Models\NoCache.cs" />
     <Compile Include="Models\Online.cs" />
     <Compile Include="Models\PasswordChange.cs" />
@@ -2431,6 +2432,36 @@
     <Content Include="dist\pivot_spec.min.js" />
     <Content Include="dist\tips_data.min.js" />
     <Content Include="favicon.ico" />
+    <Content Include="footable\css\footable.bootstrap.css" />
+    <Content Include="footable\css\footable.bootstrap.min.css" />
+    <Content Include="footable\css\footable.core.bootstrap.css" />
+    <Content Include="footable\css\footable.core.bootstrap.min.css" />
+    <Content Include="footable\css\footable.core.standalone.css" />
+    <Content Include="footable\css\footable.core.standalone.min.css" />
+    <Content Include="footable\css\footable.editing.css" />
+    <Content Include="footable\css\footable.editing.min.css" />
+    <Content Include="footable\css\footable.filtering.css" />
+    <Content Include="footable\css\footable.filtering.min.css" />
+    <Content Include="footable\css\footable.paging.css" />
+    <Content Include="footable\css\footable.paging.min.css" />
+    <Content Include="footable\css\footable.sorting.css" />
+    <Content Include="footable\css\footable.sorting.min.css" />
+    <Content Include="footable\js\footable.core.js" />
+    <Content Include="footable\js\footable.core.min.js" />
+    <Content Include="footable\js\footable.editing.js" />
+    <Content Include="footable\js\footable.editing.min.js" />
+    <Content Include="footable\js\footable.export.js" />
+    <Content Include="footable\js\footable.export.min.js" />
+    <Content Include="footable\js\footable.filtering.js" />
+    <Content Include="footable\js\footable.filtering.min.js" />
+    <Content Include="footable\js\footable.js" />
+    <Content Include="footable\js\footable.min.js" />
+    <Content Include="footable\js\footable.paging.js" />
+    <Content Include="footable\js\footable.paging.min.js" />
+    <Content Include="footable\js\footable.sorting.js" />
+    <Content Include="footable\js\footable.sorting.min.js" />
+    <Content Include="footable\js\footable.state.js" />
+    <Content Include="footable\js\footable.state.min.js" />
     <Content Include="Global.asax" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap.min.css.map" />
@@ -3085,6 +3116,11 @@
     <Content Include="Views\Shared\_Layout_satis.cshtml" />
     <Content Include="Views\Shared\_Layout_hammaddelistesi.cshtml" />
     <Content Include="Views\Shared\_Layout_fiyatsiz_hammaddelistesi.cshtml" />
+    <Content Include="Views\Satis\ZiyaretKaydiListesi.cshtml" />
+    <Content Include="Views\Shared\_Layout_ziyaretci.cshtml" />
+    <Content Include="Views\Uretim\IsEmri.cshtml" />
+    <Content Include="Views\Satis\ZiyaretNotlarim.cshtml" />
+    <Content Include="Views\Shared\_Layout_ziyaretci_notlarım.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -3219,17 +3255,18 @@
     <LangVersion>7.3</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <Optimize>true</Optimize>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <LangVersion>7.3</LangVersion>
     <ErrorReport>prompt</ErrorReport>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <IncludeIisSettings>false</IncludeIisSettings>
     <LegacyPublishPropertiesPageEnabled>true</LegacyPublishPropertiesPageEnabled>
     <ExcludeGeneratedDebugSymbol>false</ExcludeGeneratedDebugSymbol>
@@ -3286,8 +3323,6 @@
           <DevelopmentServerPort>50324</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:44332/</IISUrl>
-          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
-          <IISAppRootUrl>http://localhost:44332/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
