--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -352,10 +352,8 @@
     <Compile Include="Models\Modules.cs" />
     <Compile Include="Models\MSIPAcik.cs" />
     <Compile Include="Models\Musteri.cs" />
-
     <Compile Include="Models\MusteriRandevu.cs" />
     <Compile Include="Models\MusteriUrunModel.cs" />
-
     <Compile Include="Models\NoCache.cs" />
     <Compile Include="Models\Online.cs" />
     <Compile Include="Models\PasswordChange.cs" />
@@ -2219,6 +2217,7 @@
     <Content Include="Content\Loading.css" />
     <Content Include="Content\materialize.min.css" />
     <Content Include="Content\Menu.css" />
+    <Content Include="Content\select2.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\sweetalert\bootstrap-sweetalert.png" />
     <Content Include="Content\sweetalert\docs.css" />
@@ -2295,7 +2294,6 @@
     <Content Include="footable\js\footable.sorting.min.js" />
     <Content Include="footable\js\footable.state.js" />
     <Content Include="footable\js\footable.state.min.js" />
-
     <Content Include="fullcalendar-scheduler-6.0.1\dist\index.global.js" />
     <Content Include="fullcalendar-scheduler-6.0.1\dist\index.global.min.js" />
     <Content Include="fullcalendar-scheduler-6.0.1\examples\resource-add-remove.html" />
@@ -2332,7 +2330,6 @@
     <Content Include="fullcalendar-scheduler-6.0.1\packages\scrollgrid\index.global.min.js" />
     <Content Include="fullcalendar-scheduler-6.0.1\packages\timeline\index.global.js" />
     <Content Include="fullcalendar-scheduler-6.0.1\packages\timeline\index.global.min.js" />
-
     <Content Include="Global.asax" />
     <Content Include="Content\bootstrap\mixins.less" />
     <Content Include="Content\bootstrap\variables.less" />
@@ -3010,22 +3007,19 @@
     <Content Include="Views\Uretim\buttons.css" />
     <Content Include="Views\Uretim\Index.cshtml" />
     <Content Include="Views\Shared\_Layout_isemri.cshtml" />
-    <Content Include="Views\Satis\Test.cshtml" />
+    <Content Include="Views\Satis\ZiyaretPlanlari.cshtml" />
     <Content Include="Views\Shared\_Layout_satis.cshtml" />
     <Content Include="Views\Shared\_Layout_hammaddelistesi.cshtml" />
     <Content Include="Views\Shared\_Layout_fiyatsiz_hammaddelistesi.cshtml" />
     <Content Include="Views\Satis\ZiyaretKaydiListesi.cshtml" />
     <Content Include="Views\Shared\_Layout_ziyaretci.cshtml" />
     <Content Include="Views\Uretim\IsEmri.cshtml" />
-
     <Content Include="Views\Shared\_Layout_musteri_raporu.cshtml" />
     <Content Include="Views\Satis\MusteriRaporu.cshtml" />
     <Content Include="Views\Shared\_Layout_musteri_raporu_ozel.cshtml" />
     <Content Include="Views\Satis\MusteriRaporuOzel.cshtml" />
-
     <Content Include="Views\Satis\ZiyaretNotlarim.cshtml" />
-    <Content Include="Views\Shared\_Layout_ziyaretci_notlarım.cshtml" />
-
+    <Content Include="Views\Shared\_Layout_ZiyaretPlanlari.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -3354,11 +3348,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\</OutputPath>
-
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-
     <DefineConstants>TRACE</DefineConstants>
-
     <Optimize>false</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
