--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -3222,6 +3222,7 @@
     <Content Include="Views\Satis\MusteriRaporuOzel.cshtml" />
     <Content Include="Views\Satis\ZiyaretNotlarim.cshtml" />
     <Content Include="Views\Shared\_Layout_ZiyaretPlanlari.cshtml" />
+    <Content Include="Views\Sevkiyat\Test.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
