--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -2562,6 +2562,9 @@
     <Content Include="images\img-bi%403x.png" />
     <Content Include="images\img-bi.png" />
     <Content Include="images\online-survey.png" />
+    <Content Include="jsPDF\jspdf.umd.min.js" />
+    <Content Include="jsPDF\MIT-LICENSE.txt" />
+    <Content Include="jsPDF\polyfills.umd.min.js" />
     <Content Include="libman.json" />
     <Content Include="lib\jqueryui\jquery-ui.js" />
     <Content Include="lib\jqueryui\jquery-ui.min.js" />
@@ -3223,6 +3226,7 @@
     <Content Include="Views\Satis\ZiyaretNotlarim.cshtml" />
     <Content Include="Views\Shared\_Layout_ZiyaretPlanlari.cshtml" />
     <Content Include="Views\Sevkiyat\Test.cshtml" />
+    <Content Include="Views\Shared\_Layout _yonetim_stok.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -3257,6 +3261,7 @@
     <Content Include="Views\Shared\_Layout_detayli_Sip.cshtml" />
     <Content Include="Views\Sevkiyat\SiparisRaporu.cshtml" />
     <Content Include="Views\Shared\_Layout_sevkiyat.cshtml" />
+    <Content Include="Views\Yonetim\Stok.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
