--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -2561,6 +2561,7 @@
     <Content Include="images\img-bi%402x.png" />
     <Content Include="images\img-bi%403x.png" />
     <Content Include="images\img-bi.png" />
+    <Content Include="images\novasaydam.png" />
     <Content Include="images\online-survey.png" />
     <Content Include="jsPDF\jspdf.umd.min.js" />
     <Content Include="jsPDF\MIT-LICENSE.txt" />
@@ -3227,6 +3228,7 @@
     <Content Include="Views\Shared\_Layout_ZiyaretPlanlari.cshtml" />
     <Content Include="Views\Sevkiyat\Test.cshtml" />
     <Content Include="Views\Shared\_Layout _yonetim_stok.cshtml" />
+    <Content Include="Views\Shared\_Layout_menu.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
