--- a/NOVA/packages.config
+++ b/NOVA/packages.config
@@ -2,7 +2,12 @@
 <packages>
   <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net48" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
+  <package id="Azure.Core" version="1.25.0" targetFramework="net48" />
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml" version="2.19.0" targetFramework="net48" />
+  <package id="iTextSharp" version="5.5.13.3" targetFramework="net48" />
+  <package id="iTextSharp-LGPL" version="4.1.6" targetFramework="net48" />
   <package id="JavaScriptEngineSwitcher.Core" version="3.19.0" targetFramework="net48" />
   <package id="jQuery" version="3.6.3" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net48" />
@@ -77,6 +82,14 @@
   <package id="Microsoft.Extensions.Options" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.WebEncoders" version="7.0.2" targetFramework="net48" />
+  <package id="Microsoft.Graph.Core" version="2.0.14" targetFramework="net48" />
+  <package id="Microsoft.Identity.Client" version="4.47.2" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.23.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.23.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.23.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.23.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.23.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.23.1" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="4.0.0" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
@@ -105,6 +118,7 @@
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net48" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net48" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.23.1" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
@@ -116,6 +130,7 @@
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Memory.Data" version="7.0.0" targetFramework="net48" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
+  <package id="System.Net.Http.WinHttpHandler" version="6.0.1" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net48" />
   <package id="System.Reflection.Metadata" version="7.0.0" targetFramework="net48" />
