--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -323,6 +323,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AuxiliaryController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\FinansController.cs" />
     <Compile Include="Controllers\IKController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\IsEmriController.cs" />
@@ -2142,7 +2143,11 @@
     <Content Include="assets\img\icons\unicons\cc-warning.png" />
     <Content Include="assets\img\icons\unicons\chart-success.png" />
     <Content Include="assets\img\icons\unicons\chart.png" />
+    <Content Include="assets\img\icons\unicons\delete.png" />
+    <Content Include="assets\img\icons\unicons\floppy-disk.png" />
     <Content Include="assets\img\icons\unicons\paypal.png" />
+    <Content Include="assets\img\icons\unicons\refresh.png" />
+    <Content Include="assets\img\icons\unicons\row.png" />
     <Content Include="assets\img\icons\unicons\wallet-info.png" />
     <Content Include="assets\img\icons\unicons\wallet.png" />
     <Content Include="assets\img\illustrations\girl-doing-yoga-light.png" />
@@ -3199,7 +3204,7 @@
     <Content Include="Views\IK\PersonelBilgi.cshtml" />
     <Content Include="Views\IK\PersonelBilgiYonetim.cshtml" />
     <Content Include="Views\IK\PersonelSubeYonetim.cshtml" />
-    <Content Include="Views\Satis\DetayliSiparis.cshtml" />
+    <Content Include="Views\Satis\DetayliSiparis2_yedek.cshtml" />
     <Content Include="Views\SatinAlma\SatinAlmaRaporu.cshtml" />
     <Content Include="Views\IsEmri\IndexOld.cshtml" />
     <Content Include="Views\IsEmri\Index.cshtml" />
@@ -3211,6 +3216,8 @@
     <Content Include="Views\Home\Maintenance.cshtml" />
     <Content Include="Views\Satis\FiyatYonetimi.cshtml" />
     <Content Include="Views\Satis\FiyatListesi.cshtml" />
+    <Content Include="Views\Finans\Kur.cshtml" />
+    <Content Include="Views\Satis\DetayliSiparis.cshtml" />
     <None Include="Views\Satis\maintenance.cshtml" />
     <Content Include="Views\Sevkiyat\SaticiSiparisRaporu.cshtml" />
     <Content Include="Views\Uretim\buttons.css" />
@@ -3235,6 +3242,7 @@
     <Content Include="Views\Shared\_Layout_Fiyat_yonetim.cshtml" />
     <Content Include="Views\Satis\Test.cshtml" />
     <None Include="Views\Shared\_Layout_kullanici.cshtml" />
+    <Content Include="Views\Shared\_Layout_Kur.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
