--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -342,6 +342,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Cikti_SERI_MODEL.cs" />
+    <Compile Include="Models\ExecModel.cs" />
     <Compile Include="Models\Fav.cs" />
     <Compile Include="Models\FilterModel.cs" />
     <Compile Include="Models\IESIRANO.cs" />
@@ -1994,6 +1995,7 @@
     <Content Include="assets\boxicons-2.1.2\svg\solid\bxs-zap.svg" />
     <Content Include="assets\boxicons-2.1.2\svg\solid\bxs-zoom-in.svg" />
     <Content Include="assets\boxicons-2.1.2\svg\solid\bxs-zoom-out.svg" />
+    <Content Include="assets\css\arrow.css" />
     <Content Include="assets\css\demo.css" />
     <Content Include="assets\css\mutluyillar.css" />
     <Content Include="assets\happy-new-year2022\dist\index.html" />
@@ -3241,6 +3243,7 @@
     <Content Include="Views\Shared\_Layout_menu.cshtml" />
     <Content Include="Views\Shared\_Layout_Fiyat_yonetim.cshtml" />
     <Content Include="Views\Satis\Test.cshtml" />
+    <Content Include="Views\Satis\UygulamaIstatistik.cshtml" />
     <None Include="Views\Shared\_Layout_kullanici.cshtml" />
     <Content Include="Views\Shared\_Layout_Kur.cshtml" />
     <None Include="Views\Web.Debug.config">
