--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -332,6 +332,7 @@
     <Compile Include="Controllers\SatinAlmaController.cs" />
     <Compile Include="Controllers\SatisController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ScannerController.cs" />
     <Compile Include="Controllers\SessionTimeoutAttribute.cs" />
     <Compile Include="Controllers\SevkiyatController.cs" />
     <Compile Include="Controllers\SweetController.cs" />
@@ -2166,6 +2167,7 @@
     <Content Include="assets\js\main.js" />
     <Content Include="assets\js\mutluyillar.js" />
     <Content Include="assets\js\pages-account-settings-account.js" />
+    <Content Include="assets\js\QrScanner.js" />
     <Content Include="assets\js\ui-modals.js" />
     <Content Include="assets\js\ui-popover.js" />
     <Content Include="assets\js\ui-toasts.js" />
@@ -2547,6 +2549,8 @@
     <Content Include="assets\boxicons-2.1.2\fonts\boxicons.woff" />
     <Content Include="assets\boxicons-2.1.2\fonts\boxicons.woff2" />
     <Content Include="images\add-user.png" />
+    <Content Include="images\dolartlpng.png" />
+    <Content Include="images\efecelogo.png" />
     <Content Include="images\form.png" />
     <Content Include="images\ic-arrow-line-left%402x.png" />
     <Content Include="images\ic-arrow-line-left%403x.png" />
@@ -3243,7 +3247,8 @@
     <Content Include="Views\Shared\_Layout_menu.cshtml" />
     <Content Include="Views\Shared\_Layout_Fiyat_yonetim.cshtml" />
     <Content Include="Views\Satis\Test.cshtml" />
-    <Content Include="Views\Satis\UygulamaIstatistik.cshtml" />
+    <Content Include="Views\Scanner\Scanner.cshtml" />
+    <Content Include="Views\Satis\Teklif.cshtml" />
     <None Include="Views\Shared\_Layout_kullanici.cshtml" />
     <Content Include="Views\Shared\_Layout_Kur.cshtml" />
     <None Include="Views\Web.Debug.config">
@@ -3255,6 +3260,7 @@
     <None Include="Views\Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="Views\YonetimPaneli\UygulamaIstatistik.cshtml" />
     <None Include="Views\Yonetim\Index.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Views\Web.config" />
@@ -3281,6 +3287,15 @@
     <Content Include="Views\Sevkiyat\SiparisRaporu.cshtml" />
     <Content Include="Views\Shared\_Layout_sevkiyat.cshtml" />
     <Content Include="Views\Yonetim\Stok.cshtml" />
+    <None Include="Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
+    <None Include="Web.rel-32bit.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
+    <None Include="Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
