--- a/NOVA/Web.config
+++ b/NOVA/Web.config
@@ -11,12 +11,14 @@
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
+	  <add key="AspEnableChunkedEncoding" value="true"/>   
     <add key="webpages:Enabled" value="true"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="aspnet:MaxJsonDeserializerMembers" value="150000"/>
   </appSettings>
   <system.web>
+	  
     <globalization uiCulture="tr" culture="tr-TR" fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" responseHeaderEncoding="windows-1254"/>
     <authentication mode="Forms">
       <forms loginUrl="/Login/Login" defaultUrl="/Login/Login" timeout="240" cookieless="UseCookies"/>
@@ -259,6 +261,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+	<system.webServer>
+		
+		<validation validateIntegratedModeConfiguration="true"/>
+	</system.webServer>
+
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
