Role Helper Oluşturuldu. Layout Menu içerisinde DisplaySevkiyat düzeltildi.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -380,6 +380,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Utils\RoleHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\boxicons-2.1.2\css\animations.css" />
