Mal Kabul Formu Oluşturuldu. Role Helper Düzenlendi. AuthHelper Oluşturuldu.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -380,6 +380,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Utils\AuthHelper.cs" />
     <Compile Include="Utils\RoleHelper.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -5430,6 +5431,7 @@
     <Content Include="Views\Satis\Test.cshtml" />
     <Content Include="Views\Satis\Teklif.cshtml" />
     <Content Include="Views\Satis\Tekliflerim.cshtml" />
+    <Content Include="Views\Sevkiyat\MalKabulFormu.cshtml" />
     <None Include="Views\Shared\_Layout_kullanici.cshtml" />
     <Content Include="Views\Shared\_Layout_Kur.cshtml" />
     <Content Include="Views\Shared\_layout_satinalma.cshtml" />
