--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -5432,6 +5432,7 @@
     <Content Include="Views\Satis\Teklif.cshtml" />
     <Content Include="Views\Satis\Tekliflerim.cshtml" />
     <Content Include="Views\Sevkiyat\MalKabulFormu.cshtml" />
+    <Content Include="Views\Sevkiyat\SevkMalKabul.cshtml" />
     <None Include="Views\Shared\_Layout_kullanici.cshtml" />
     <Content Include="Views\Shared\_Layout_Kur.cshtml" />
     <Content Include="Views\Shared\_layout_satinalma.cshtml" />
