--- a/NOVA/Web.config
+++ b/NOVA/Web.config
@@ -32,7 +32,7 @@
       <forms loginUrl="/Login/Login" defaultUrl="/Login/Login" timeout="240" cookieless="UseCookies"/>
     </authentication>
     <sessionState mode="InProc" timeout="240" cookieless="false"/>
-    <compilation debug="true" targetFramework="4.8"/>
+    <compilation debug="false" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.8"/>
     <customErrors mode="Off">
       <error statusCode="404" redirect="/Error/Page404"/>
