--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -5433,6 +5433,7 @@
     <Content Include="Views\Satis\Tekliflerim.cshtml" />
     <Content Include="Views\Sevkiyat\MalKabulFormu.cshtml" />
     <Content Include="Views\Sevkiyat\SevkMalKabul.cshtml" />
+    <Content Include="Views\Shared\_Layout_common.cshtml" />
     <None Include="Views\Shared\_Layout_kullanici.cshtml" />
     <Content Include="Views\Shared\_Layout_Kur.cshtml" />
     <Content Include="Views\Shared\_layout_satinalma.cshtml" />
@@ -5919,6 +5920,8 @@
           <DevelopmentServerPort>50324</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:44332/</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://localhost:44332/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
